--- a/estate/views/estate_menus.xml
+++ b/estate/views/estate_menus.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0"?>
 <odoo>
     <menuitem id="estate_menu_root" name="Estate">
-        <menuitem id="estate_first_level_menu" name="First Level">
+        <menuitem id="estate_menu" name="Advert">
             <menuitem id="estate_menu_action" action="estate_action"/>
+        </menuitem>
+        <menuitem id="estate_type_menu" name="Settings">
+            <menuitem id="estate_type_menu_action" action="estate_type_action"/>
         </menuitem>
     </menuitem>
 </odoo>
