--- a/estate/views/estate_views.xml
+++ b/estate/views/estate_views.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <odoo>
     <record id="estate_action" model="ir.actions.act_window">
-        <field name="name">Test action</field>
+        <field name="name">Property</field>
         <field name="res_model">estate</field>
         <field name="view_mode">tree,form</field>
     </record>
@@ -10,9 +10,83 @@
         <field name="name">estate.tree</field>
         <field name="model">estate</field>
         <field name="arch" type="xml">
-            <tree string="Channel" editable="bottom">
-                <field name="name"/>
+            <tree string="Estate List">
+                <field name="name" string="Title"/>
+                <field name="postcode"/>
+                <field name="bedrooms"/>
+                <field name="living_area" string="Living Area (sqm)"/>
+                <field name="expected_price"/>
+                <field name="selling_price"/>
+                <field name="date_availability" string="Available From"/>
             </tree>
+        </field>
+    </record>
+
+    <record id="crm_lost_reason_view_form" model="ir.ui.view">
+        <field name="name">estate.form</field>
+        <field name="model">estate</field>
+        <field name="arch" type="xml">
+            <form string="Estate Form">
+                <sheet>
+                    <h1><field name="name"/></h1> 
+                    <group>
+                        <group>
+                            <field name="postcode"/>
+                            <field name="date_availability" string="Available From"/>
+                        </group>
+
+                        <group>
+                            <field name="expected_price"/>
+                            <field name="selling_price"/>
+                        </group>
+                        <notebook>
+                            <page string="Description">
+                                <group>
+                                    <field name="description"/>
+                                    <field name="state"/>
+                                    <field name="type_id"/>
+                                </group>
+                            </page>
+                            <page string="Infos">
+                                <group>
+                                    <field name="bedrooms"/>
+                                    <field name="living_area" string="Living Area (sqm)"/>
+                                    <field name="facades"/>
+                                    <field name="garage"/>
+                                    <field name="garden"/>
+                                    <field name="garden_area" string="Garden Area (sqm)"/>
+                                    <field name="garden_orientation"/>
+                                </group>
+                            </page>
+                            <page string="People">
+                                <group>
+                                    <field name="salesman_id"/>
+                                    <field name="buyer_id"/>
+                                </group>
+                            </page>
+                        </notebook>
+                    </group>
+                </sheet>
+            </form>
+        </field>
+    </record>
+    
+    <record id="view_delivery_carrier_search" model="ir.ui.view">
+        <field name="name">estate.search</field>
+        <field name="model">estate</field>
+        <field name="arch" type="xml">
+            <search string="Estate Search">
+                <field name="name" string="Title"/>
+                <field name="postcode"/>
+                <field name="expected_price"/>
+                <field name="selling_price"/>
+                <field name="bedrooms"/>
+                <field name="living_area" string="Living Area (sqm)"/>
+                <field name="facades"/>
+                <separator/>
+                <filter string="Available" name="available" domain="['|', ('state', '=', 'new'), ('state', '=', 'offer_received')]"/>
+                <filter string="Postcode" name="postcode" context="{'group_by':'postcode'}"/>
+            </search>
         </field>
     </record>
 </odoo>
